pom bug